upgrade to bootstrap 3.1.1

--- a/app/views/admin/cms/categories/_edit.html.haml
+++ b/app/views/admin/cms/categories/_edit.html.haml
@@ -3,4 +3,4 @@
 = form_for @category, :as => :category, :url => admin_cms_site_category_path(@site, category), :remote => true, :html => {:id => dom_id(category)} do |form|
   .input-append
     = form.text_field :label
-    %button.btn.btn-mini= t('.save')
+    %button.btn.btn-default.btn-mini= t('.save')
