--- a/app/assets/stylesheets/comfortable_mexican_sofa/application.css.sass
+++ b/app/assets/stylesheets/comfortable_mexican_sofa/application.css.sass
@@ -1,6 +1,6 @@
 //= require jquery.ui.all
 //= require codemirror
-//= require comfortable_mexican_sofa/lib/bootstrap
+//= require comfortable_mexican_sofa/lib/bootstrap-3.1.1
 //= require comfortable_mexican_sofa/lib/bootstrap-wysihtml5
 //= require comfortable_mexican_sofa/lib/bootstrap-datetimepicker
 //= require comfortable_mexican_sofa/bootstrap_overrides
