--- a/app/views/admin/cms/files/_index.html.haml
+++ b/app/views/admin/cms/files/_index.html.haml
@@ -3,7 +3,7 @@
 
 .box.file-uploader
   = form_for :file, :url => admin_cms_site_files_path(@site, :ajax => true), :html => {:multipart => true, :target => 'file-upload-frame'} do |form|
-    %span.btn.btn-file
+    %span.btn.btn-default.btn-file
       = t('.button')
       = form.file_field :file, :multiple => true, :id => nil
   
