--- a/app/views/admin/cms/files/index.html.haml
+++ b/app/views/admin/cms/files/index.html.haml
@@ -1,5 +1,5 @@
 .page-header
-  = link_to t('.new_link'), new_admin_cms_site_file_path(@site), :class => 'btn pull-right'
+  = link_to t('.new_link'), new_admin_cms_site_file_path(@site), :class => 'btn btn-default pull-right'
   %h2= t('.title')
   
 = render 'admin/cms/partials/files_before'
@@ -26,7 +26,7 @@
             
         %td
           .btn-group
-            = link_to t('.edit'), edit_admin_cms_site_file_path(@site, file), :class => 'btn btn-small'
+            = link_to t('.edit'), edit_admin_cms_site_file_path(@site, file), :class => 'btn btn-default btn-small'
             = link_to t('.delete'), admin_cms_site_file_path(@site, file), :method => :delete, :data => {:confirm => t('.are_you_sure')}, :class => 'btn btn-small btn-danger'
 
 = render 'admin/cms/partials/files_after'
