--- a/app/views/admin/cms/layouts/_index_branch.html.haml
+++ b/app/views/admin/cms/layouts/_index_branch.html.haml
@@ -9,8 +9,8 @@
           %span &#8645;
           
     .btn-group
-      = link_to t('.add_child_layout'), new_admin_cms_site_layout_path(@site, :parent_id => layout.id), :class => 'btn btn-small'
-      = link_to t('.edit'), edit_admin_cms_site_layout_path(@site, layout), :class => 'btn btn-small'
+      = link_to t('.add_child_layout'), new_admin_cms_site_layout_path(@site, :parent_id => layout.id), :class => 'btn btn-default btn-small'
+      = link_to t('.edit'), edit_admin_cms_site_layout_path(@site, layout), :class => 'btn btn-default btn-small'
       = link_to t('.delete'), admin_cms_site_layout_path(@site, layout), :method => :delete, :data => {:confirm => t('.are_you_sure')}, :class => 'btn btn-small btn-danger'
     
     .item-content
