--- a/app/views/admin/cms/pages/_index_branch.html.haml
+++ b/app/views/admin/cms/pages/_index_branch.html.haml
@@ -19,8 +19,8 @@
           %span &#8645;
           
     .btn-group
-      = link_to t('.add_child_page'), new_admin_cms_site_page_path(@site, :parent_id => page.id), :class => 'btn btn-small'
-      = link_to t('.edit'), edit_admin_cms_site_page_path(@site, page), :class => 'btn btn-small'
+      = link_to t('.add_child_page'), new_admin_cms_site_page_path(@site, :parent_id => page.id), :class => 'btn btn-default btn-small'
+      = link_to t('.edit'), edit_admin_cms_site_page_path(@site, page), :class => 'btn btn-default btn-small'
       = link_to t('.delete'), admin_cms_site_page_path(@site, page), :method => :delete, :data => {:confirm => t('.are_you_sure')}, :class => 'btn btn-small btn-danger'
       
     .item-content
