--- a/app/views/admin/cms/sites/index.html.haml
+++ b/app/views/admin/cms/sites/index.html.haml
@@ -1,5 +1,5 @@
 .page-header
-  = link_to t('.new_link'), new_admin_cms_site_path, :class => 'btn pull-right'
+  = link_to t('.new_link'), new_admin_cms_site_path, :class => 'btn btn-default pull-right'
   %h2= t('.title')
 
 = render 'admin/cms/partials/sites_before'
@@ -21,8 +21,8 @@
             = link_to host, host, :target => '_blank'
       %td
         .btn-group
-          = link_to t('.select'),  admin_cms_site_pages_path(site), :class => 'btn btn-small'
-          = link_to t('.edit'), edit_admin_cms_site_path(site), :class => 'btn btn-small'
+          = link_to t('.select'),  admin_cms_site_pages_path(site), :class => 'btn btn-default btn-small'
+          = link_to t('.edit'), edit_admin_cms_site_path(site), :class => 'btn btn-default btn-small'
           = link_to t('.delete'), admin_cms_site_path(site), :method => :delete, :data => {:confirm => t('.are_you_sure')}, :class => 'btn btn-small btn-danger'
           
 = render 'admin/cms/partials/sites_after'
